--- a/projeto_site/css_op/style.css
+++ b/projeto_site/css_op/style.css
@@ -107,6 +107,11 @@ h1 {
 }
 
 
+
+
+
+
+
 @media (max-width: 1100px){ 
     header{
         width: 85%;
@@ -125,8 +130,7 @@ h1 {
 
 @media (max-width: 1100px){ 
 .container-geral h2{
-        width: 40%;
-        height: 2rem;
+        font-size: 25px;
         text-align: center;
         font-weight: bold;
 }
@@ -180,4 +184,57 @@ h1 {
     width: 30%;
     margin-left: 27%;
 }
+}
+
+
+
+
+
+
+
+
+
+
+/* Estilos para celular */
+@media screen and (max-width: 768px) {
+    header {
+        width: 100%;
+        margin-left: 0;
+    }
+
+    .cabecalho {
+        max-width: 100%;
+    }
+
+    .container-geral h2 {
+        margin-left: 5%;
+        margin-right: 5%;
+    }
+
+    .character img {
+        max-width: 50px;
+    }
+}
+
+/* Estilos para tablets */
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+    header {
+        width: 100%;
+        margin-left: 0;
+    }
+
+    .cabecalho {
+        max-width: 100%;
+        margin-left: 210px;
+        margin-right: 210px;
+    }
+
+    .container-geral h2 {
+        margin-left: 10%;
+        margin-right: 10%;
+    }
+
+    .character img {
+        max-width: 60px;
+    }
 }
