--- a/projeto_site/css_op/style-onepiece.css
+++ b/projeto_site/css_op/style-onepiece.css
@@ -15,6 +15,7 @@ header {
 header img{
     width: 100%;
     height: 100%;
+    
 }
 
 h1 {
@@ -64,7 +65,7 @@ h1 {
 }
 
 .character img{
-    max-width: 69px;
+    width: 50px;
     border-radius: 5px;
     float: left;
     margin-right: 20px;
@@ -112,10 +113,11 @@ h1 {
 
 
 
-@media (max-width: 1100px){ 
+@media (max-width: 1920px){ 
     header{
-        width: 85%;
+        width: 750px;
         height: 20rem;
+        margin-left: 30%;
     }
 }
 
